# calendar-tui

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac  settings.h  text.h
boxes/: Makefile.am  box.c  box.h  day-box.c  day-box.h  header-box.c  header-box.h  menu-box.c  menu-box.h
calendar-tui/: Makefile.am  calendar-tui.c  calendar.c  calendar.h
common/: Makefile.am  database.c  database.h  daydata.c  daydata.h  file-handler.c  file-handler.h
menus/: Makefile.am  box-menu.c  box-menu.h  menu.c  menu.h
