lib_LTLIBRARIES += boxes/libboxes.la

boxes_libboxes_la_SOURCES = \
    boxes/box.c \
    boxes/day-box.c \
    boxes/header-box.c \
    boxes/menu-box.c \
    boxes/box.h \
    boxes/day-box.h \
    boxes/header-box.h \
    boxes/menu-box.h

boxes_libboxes_la_CFLAGS = \
    $(TUI_CFLAGS) \
    -I$(top_srcdir)/common
